<resources>
    <string name="app_name">Repeat</string>

    <string name="fail_image_creation">이미지 경로를 생성하는 데 실패하였습니다.</string>
    <string name="fail_camera_image_capture">촬영된 이미지를 불러오는 데 실패하였습니다.</string>
    <string name="no_camera_handling_activity">카메라 앱이 존재하지 않습니다.</string>

    <!-- Login -->
    <string name="naver_client_id">CT20Gn8QO6LfJdnS2pkf</string>
    <string name="naver_client_secret">qCOlbYXuur</string>
    <string name="naver_client_name">Repeat</string>
    <string name="kakao_app_key">5016c44520068f26880ce08b8ba80f7a</string>
    <string name="kakao_rest_api_key">KakaoAK 3a67c63f2298f8a94153f760e8235bbd</string>

    <string name="nav_home">홈</string>
    <string name="nav_mark">채점하기</string>
    <string name="nav_stats">결과보기</string>

    <string name="intro">당신의 공부 기록, 리핏</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="chapter">단원</string>
    <string name="repeat">회차</string>
    <string name="number">번호</string>
    <string name="correct">맞음</string>
    <string name="incorrect">틀림</string>
    <string name="not_solved">미채점</string>
    <string name="delete">삭제</string>
    <string name="save_temp">임시저장</string>
    <string name="all">ALL</string>

    <!-- content description -->
    <string name="desc_remove">remove contents</string>
    <string name="desc_image">image</string>

    <!-- Main -->
    <string name="label_main_activity">내 서재</string>
    <string name="confirm_delete">해당 책을 삭제하시겠습니까?</string>
    <string name="confirm_finish">\'뒤로\'버튼을 한 번 더 누르시면 종료됩니다.</string>

    <!-- Mark -->
    <string name="label_mark_activity">채점하기</string>
    <string name="text_loading_mark">잠시만 기다려주세요.\n채점중입니다.</string>
    <string name="text_fail_mark">채점에 실패하였습니다.\n다시 시도해주세요.</string>

    <!-- Add title and image -->
    <string name="tv_title_add">책 제목 입력하기</string>
    <string name="tv_title_change">책 제목 수정하기</string>
    <string name="hint_title_add">도서명을 입력해주세요.</string>
    <string name="tv_image_add">책 이미지 추가하기</string>
    <string name="search_book">웹으로 찾아보기</string>
    <string name="text_success_update_book">수정이 완료되었습니다.</string>

    <!-- Search Book -->
    <string name="label_search_book_activity">도서 검색</string>
    <string name="hint_search_title_add">어떤 책을 찾으시나요?</string>
    <string name="desc_book_cover_image">book cover image</string>

    <!-- Add Chapter -->
    <string name="label_add_title_image_activity">책 제목 입력</string>
    <string name="label_add_chapter_activity">단원수 입력</string>
    <string name="hint_chapter_add">총 몇 단원인가요?</string>
    <string name="add_chapter_validate_fail_empty">단원 수를 입력해주세요.</string>
    <string name="add_chapter_validate_fail_number_format">자연수를 입력해주세요.</string>
    <string name="add_chapter_validate_fail_number_exceed">단원 수는 50개를 초과할 수 없습니다.</string>

    <!-- Add Problem -->
    <string name="label_addproblem_activity">문제수 입력</string>
    <string name="text_loading_add_book">잠시만 기다려주세요.\n등록중입니다.</string>
    <string name="text_success_add_book">등록이 완료되었습니다.</string>
    <string name="text_fail_add_book">책 등록에 실패하였습니다.\n다시 시도해주세요.</string>

    <!-- Recents -->
    <string name="label_recents_activity">최근기록</string>
    <string name="label_recents_problem_number">문항</string>
    <string name="label_recents_mark">정오답</string>

    <!-- Stats -->
    <string name="label_title_pie_chart">오답 수 비중</string>
    <string name="label_title_line_chart">단원별 정답률</string>
    <string name="label_percent_correct_accum">누적평균 정답률(%)</string>
    <string name="label_percent__correct_max">회차중 최고 정답률(%)</string>
    <string name="label_percent_correct_min">회차중 최저 정답률(%)</string>
    <string name="no_stats">채점을 완료해주세요</string>

    <!-- My Page -->
    <string name="label_mypage_activity">마이페이지</string>
    <string name="label_nickname">닉네임</string>
    <string name="label_tutorial">리핏 사용 튜토리얼</string>
    <string name="label_opinion">의견 보내기</string>
    <string name="label_faq">FAQ</string>
    <string name="label_terms">서비스 이용약관</string>
    <string name="label_policy">개인정보 정책</string>
    <string name="label_version">버전정보</string>
    <string name="label_init">내 서재 초기화</string>
    <string name="label_logout">로그아웃</string>
    <string name="label_unregister">회원탈퇴</string>
    <string name="desc_success_init">내 서재 초기화가 완료되었습니다.</string>
    <string name="desc_fail_init">서재 초기화에 실패하였습니다.\n다시 시도해 주세요.</string>

    <string name="logout">로그아웃</string>
    <string name="confirm_logout">정말 로그아웃을 하시겠습니까?</string>

    <string name="btn_unregister">탈퇴하기</string>
    <string name="confirm_unregister">정말 탈퇴하시겠어요..?</string>
    <string name="desc_unregister1">- 회원 탈퇴시 저장된 정보가 모두 삭제됩니다.</string>
    <string name="desc_unregister2">- 탈퇴 후 재가입이 가능합니다.</string>

    <string name="label_unregister_activity">회원탈퇴</string>
    <string name="complete_unregister">회원 탈퇴 처리가 완료되었습니다.</string>
    <string name="complete_desc_unregister">그 동안 공부하느라 고생하셨습니다.\n앞으로 꽃길만 가득하시길 기원합니다.</string>

    <string name="no_need_to_update">현재 최신 버전을 사용 중입니다.</string>

    <string name="label_nickname_activity">닉네임 수정하기</string>
    <string name="nickname_change_info">새로운 닉네임을 입력해주세요.</string>
    <string name="nickname_change_hint">닉네임(6자리)</string>
    <string name="nickname_change_dsec">한글,영어 혹은 숫자조합 6글자이내만 가능합니다.</string>
    <string name="nickname_change_fail">닉네임 변경에 실패하였습니다. 다시 시도해주세요.</string>

    <string name="init_desc">저장된 도서 및 채점 내역의 정보가 초기화되고 기록이 모두 삭제됩니다. 정말 초기화하시겠습니까?</string>

</resources>
