<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".mypage.MyPageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/repeat_gray" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:background="#f5f5f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/view_profile"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:text="@string/label_nickname"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:background="#f5f5f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_profile" />

    <TextView
        android:id="@+id/view_idpw"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        android:text="@string/label_tutorial"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/view_opinion"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        android:text="@string/label_opinion"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_idpw" />

    <TextView
        android:id="@+id/view_faq"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        android:text="@string/label_faq"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_opinion" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:background="#f5f5f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_faq" />

    <TextView
        android:id="@+id/view_terms"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        android:text="@string/label_terms"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/view_policy"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        android:text="@string/label_policy"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_terms" />

    <TextView
        android:id="@+id/view_version"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        android:text="@string/label_version"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_policy" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:background="#f5f5f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_version" />

    <TextView
        android:id="@+id/view_init"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        android:text="@string/label_init"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/view_logout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        android:text="@string/label_logout"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_init" />

    <TextView
        android:id="@+id/view_unregister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bottom_border"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="13dp"
        android:text="@string/label_unregister"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_logout" />

</androidx.constraintlayout.widget.ConstraintLayout>