<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addBook.chapter.AddChapterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/repeat_gray" />

    <EditText
        android:id="@+id/etChapter"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_chapter_add"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/chapterBtnNext"
        android:layout_width="88dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etChapter" />

    <ImageView
        android:id="@+id/ivRemove"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etChapter"
        app:layout_constraintEnd_toEndOf="@+id/etChapter"
        app:layout_constraintTop_toTopOf="@+id/etChapter"
        app:srcCompat="@drawable/ic_remove"
        tools:visibility="visible"
        android:contentDescription="@string/desc_remove" />

</androidx.constraintlayout.widget.ConstraintLayout>